UI changes n homepahe

--- a/templates/home/aboutus.html.twig
+++ b/templates/home/aboutus.html.twig
@@ -30,122 +30,26 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="abt-content">
-                        <h4><span>About</span> Job Here</h4>
-                        <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</strong></p>
-                        <p>Lorem ipsum dolor sit amet, consectel adipis elit, sed do eiusmod tempor incidi ut labore et dolore m aliqua. Ut enim ad minim veniam, quis nostrud exercitatik ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in repreh in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,</p>
-                        <p>sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudanti totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi archite beatae vitae dicta sunt explicabo. </p>
+                    <div class="abt-content" style="display: block;">
+                        <h4><span>About</span> Us</h4>
+                        <p><strong>Our Philosophy</strong></p>
+                        <p>At skill farm we believe that a visionary leader has a clear sense of their destination and
+                            what things they need to accomplish to reach it. We skill farmers enable the individuals to
+                            translate their positive intentions to tangible results. We make sure that every individual
+                            must learn to manage their present without losing their focus on their visionary future
+                            through their enviable career and life. We skill farmers believe that all failures in life
+                            or business, academics or in personal life are due to the lack of good leadership skills and
+                            inability to execute their full abilities when someone or any organization cannot perform at
+                            their peak or if they lack good skills and leadership, here we are to sow the seeds of
+                            skills to make everyone to reach pinnacle of success. "To be what we are, and to become what
+                            we are capable of becoming, is the only end of life". Methodology: Truly innovative and
+                            experimental by using case studies , role plays ,games , audio and video ,power point aided
+                            facilitation , questionnaire and interactive activities. </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- About Area End -->
-    <!--Start of Fun Factor Area-->
-    <div class="fun-factor-area bg-1 text-center ptb-100 pt-sm-60 pb-sm-30">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-6">
-                    <div class="single-fun-factor">
-                        <h1><span class="counter">340</span> +</h1>
-                        <h3>Customers</h3>
-                    </div>
-                </div>
-                <div class="col-md-3 col-6">
-                    <div class="single-fun-factor">
-                        <h1><span class="counter">450</span> +</h1>
-                        <h3>members</h3>
-                    </div>
-                </div>
-                <div class="col-md-3 col-6">
-                    <div class="single-fun-factor">
-                        <h1><span class="counter">220</span></h1>
-                        <h3>Resume</h3>
-                    </div>
-                </div>
-                <div class="col-md-3 col-6">
-                    <div class="single-fun-factor">
-                        <h1><span class="counter">299</span></h1>
-                        <h3>Company</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--End of Fun Factor Area-->
-    <!-- Working Aera Start -->
-    <div class="woring-area2 pt-130 pb-100 pt-sm-60 pb-sm-30">
-        <div class="container">
-            <!-- Section Title Start -->
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="section-title text-center ">
-                        <h2>How It Works</h2>
-                        <p>Lorem ipsum dolor sit amet, contetur adipisil elit sed do</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Section Title End -->
-            <div class="row work-shap work-shop2">
-                <div class="col-md-4">
-                    <div class="work-item">
-                        <div class="img-icon">
-                            <img src="images/icons/wrk1.png" alt="">
-                            <span>1</span>
-                        </div>
-                        <h5>Create An Account</h5>
-                        <p>Lorem ipsum dolor sit amet, contetur adipisil elit, sed do eiusmod tempor incididunt ut lab et dolore magna aliqua.</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="work-item">
-                        <div class="img-icon">
-                            <img src="images/icons/wrk2.png" alt="">
-                            <span>2</span>
-                        </div>
-                        <h5>Search Desired Job</h5>
-                        <p>Lorem ipsum dolor sit amet, contetur adipisil elit, sed do eiusmod tempor incididunt ut lab et dolore magna aliqua.</p>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="work-item">
-                        <div class="img-icon">
-                            <img src="images/icons/wrk3.png" alt="">
-                            <span>3</span>
-                        </div>
-                        <h5>Send Your Resume</h5>
-                        <p>Lorem ipsum dolor sit amet, contetur adipisil elit, sed do eiusmod tempor incididunt ut lab et dolore magna aliqua.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Working Aera End -->
-    <!--Testimonial Area Start-->
-    <div class="testimonial-area bg-2 text-center fix ptb-100 ptb-sm-60">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 ml-auto mr-auto">
-                    <div class="section-title text-white">
-                        <h2>Client Say</h2>
-                        <p>Lorem ipsum dolor sit amet, contetur adipisil elit sed do</p>
-                    </div>
-                    <div class="testimonial-carousel carousel-style-one">
-                        <div class="single-testimonial">
-                            <div class="testimonial-text pt-46">
-                                <p class="text-white p-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tem incidi ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostru exercitation ullamco laboris nisi ut aliquip</p>
-                            </div>
-                            <div class="testimonial-info">
-                                <span class="testimonial-name text-white">Kevin Roberts</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--End of Testimonial Area-->
-    <!--Start of Blog Area-->
     <div class="team-area pt-130 pb-100 pt-sm-60 pb-sm-30">
         <div class="container">
             <!-- Section Title Start -->
@@ -153,7 +57,7 @@
                 <div class="col-md-12">
                     <div class="section-title text-center ">
                         <h2>Team Member</h2>
-                        <p>Lorem ipsum dolor sit amet, contetur adipisil elit sed do</p>
+                        <p>Our Support</p>
                     </div>
                 </div>
             </div>
@@ -166,8 +70,8 @@
                             <img src="images/team/1.jpg" alt="jobhere">
                         </div>
                         <div class="team-content">
-                            <h5>Jon Dowe</h5>
-                            <h6>CEO Jobhere</h6>
+                            <h5>Shyju Nair</h5>
+                            <h6>CEO</h6>
                         </div>
                     </div>
                 </div>
@@ -179,8 +83,8 @@
                             <img src="images/team/2.jpg" alt="jobhere">
                         </div>
                         <div class="team-content">
-                            <h5>Jon Dowe</h5>
-                            <h6>CEO Jobhere</h6>
+                            <h5>JAYAN VARGHESE</h5>
+                            <h6>DIRECTOR</h6>
                         </div>
                     </div>
                 </div>
@@ -192,8 +96,8 @@
                             <img src="images/team/3.jpg" alt="jobhere">
                         </div>
                         <div class="team-content">
-                            <h5>Jon Dowe</h5>
-                            <h6>CEO Jobhere</h6>
+                            <h5>JEO VARGHESE</h5>
+                            <h6>CTO</h6>
                         </div>
                     </div>
                 </div>
@@ -205,8 +109,8 @@
                             <img src="images/team/4.jpg" alt="jobhere">
                         </div>
                         <div class="team-content">
-                            <h5>Jon Dowe</h5>
-                            <h6>CEO Jobhere</h6>
+                            <h5>JAEFFRY JOSEPH</h5>
+                            <h6>Support</h6>
                         </div>
                     </div>
                 </div>
