--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,8 +19,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title text-center ">
-                        <h2>Job Category </h2>
-                        <p>Lorem ipsum dolor sit amet, contetur adipisil elit sed do</p>
+                        <h2>Features</h2>
+                        <p>that we offer you on your success.</p>
                     </div>
                 </div>
             </div>
@@ -29,85 +29,44 @@
                     <div class="img-icon">
                         <img src="images/icons/cat1.png" alt="">
                     </div>
-                    <h5>Hotel & Restaurant</h5>
-                    <h6>(16 Jobs)</h6>
+                    <h5>Soft Skills</h5>
                 </div>
                 <div class="category-item">
                     <div class="img-icon">
                         <img src="images/icons/cat2.png" alt="">
                     </div>
-                    <h5>Travel & Agency </h5>
-                    <h6>(10 Jobs)</h6>
+                    <h5>Career Counseling </h5>
                 </div>
                 <div class="category-item">
                     <div class="img-icon">
                         <img src="images/icons/cat3.png" alt="">
                     </div>
-                    <h5>Business & Finance</h5>
-                    <h6>(15 Jobs)</h6>
+                    <h5>Communication Skills
+                    </h5>
                 </div>
                 <div class="category-item">
                     <div class="img-icon">
                         <img src="images/icons/cat4.png" alt="">
                     </div>
-                    <h5>Theme & Software</h5>
-                    <h6>(18 Jobs)</h6>
+                    <h5>Psychological Counseling</h5>
                 </div>
                 <div class="category-item">
                     <div class="img-icon">
                         <img src="images/icons/cat1.png" alt="">
                     </div>
-                    <h5>Hotel & Restaurant</h5>
-                    <h6>(16 Jobs)</h6>
+                    <h5>Faculty Training</h5>
                 </div>
                 <div class="category-item">
                     <div class="img-icon">
                         <img src="images/icons/cat2.png" alt="">
                     </div>
-                    <h5>Travel & Agency </h5>
-                    <h6>(10 Jobs)</h6>
+                    <h5>Placement Services</h5>
                 </div>
                 <div class="category-item">
                     <div class="img-icon">
                         <img src="images/icons/cat3.png" alt="">
                     </div>
-                    <h5>Business & Finance</h5>
-                    <h6>(15 Jobs)</h6>
-                </div>
-                <div class="category-item">
-                    <div class="img-icon">
-                        <img src="images/icons/cat4.png" alt="">
-                    </div>
-                    <h5>Theme & Software</h5>
-                    <h6>(18 Jobs)</h6>
-                </div>
-                <div class="category-item">
-                    <div class="img-icon">
-                        <img src="images/icons/cat1.png" alt="">
-                    </div>
-                    <h5>Hotel & Restaurant</h5>
-                    <h6>(16 Jobs)</h6>
-                </div>
-                <div class="category-item">
-                    <div class="img-icon">
-                        <img src="images/icons/cat2.png" alt="">
-                    </div>
-                    <h5>Travel & Agency </h5>
-                    <h6>(10 Jobs)</h6>
-                </div>
-                <div class="category-item">
-                    <div class="img-icon">
-                        <img src="images/icons/cat3.png" alt="">
-                    </div>
-                    <h5>Business & Finance</h5>
-                    <h6>(15 Jobs)</h6>
-                </div>
-                <div class="category-item">
-                    <div class="img-icon">
-                        <img src="images/icons/cat4.png" alt="">
-                    </div>
-                    <h5>Theme & Software</h5>
-                    <h6>(18 Jobs)</h6>
+                    <h5>School Affiliation</h5>
                 </div>
             </div>
         </div>
@@ -121,7 +80,7 @@
                 <div class="col-md-12">
                     <div class="section-title text-center ">
                         <h2>All Job</h2>
-                        <p>Lorem ipsum dolor sit amet, contetur adipisil elit sed do</p>
+                        <p>The best jobs for you..</p>
                     </div>
                 </div>
             </div>
@@ -346,25 +305,25 @@
             <div class="row">
                 <div class="col-md-3 col-6">
                     <div class="single-fun-factor">
-                        <h1 style="color: black"><span class="counter">340</span> +</h1>
-                        <h3  style="color: black">Customers</h3>
+                        <h1 style="color: black"><span class="counter">100</span> +</h1>
+                        <h3 style="color: black">Customers</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="single-fun-factor">
-                        <h1  style="color: red"><span class="counter">450</span> +</h1>
-                        <h3  style="color: red">members</h3>
+                        <h1 style="color: red"><span class="counter">129</span> +</h1>
+                        <h3 style="color: red">members</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="single-fun-factor">
-                        <h1  style="color: black"><span class="counter">220</span></h1>
+                        <h1 style="color: black"><span class="counter">55</span></h1>
                         <h3 style="color: black">Resume</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="single-fun-factor">
-                        <h1 style="color: blue"><span class="counter">299</span></h1>
+                        <h1 style="color: blue"><span class="counter">120</span></h1>
                         <h3 style="color: blue">Company</h3>
                     </div>
                 </div>
@@ -426,18 +385,43 @@
             <div class="row">
                 <div class="col-lg-8 ml-auto mr-auto">
                     <div class="section-title text-white">
-                        <h2>Client Say</h2>
-                        <p>Lorem ipsum dolor sit amet, contetur adipisil elit sed do</p>
+                        <h2>Client </h2>
+                        <p>Cheers to our clients</p>
                     </div>
                     <div class="testimonial-carousel carousel-style-one">
                         <div class="single-testimonial">
                             <div class="testimonial-text pt-46">
-                                <p class="text-white p-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                                    do eiusmod tem incidi ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostru exercitation ullamco laboris nisi ut aliquip</p>
+                                <p class="text-white p-0">Very informative and very pleasant. Really helpful in clearing
+                                    all my confusion.Looking forward to studying in UK.</p>
                             </div>
                             <div class="testimonial-info">
-                                <span class="testimonial-name text-white">Kevin Roberts</span>
+                                <span class="testimonial-name text-white">Rajshekar</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-carousel carousel-style-one">
+                        <div class="single-testimonial">
+                            <div class="testimonial-text pt-46">
+                                <p class="text-white p-0">Really helped me out a lot. And the fact that they are open
+                                    every day of the week ensured that I did'nt have to wait for my doubts to be
+                                    cleared. They are the reason I got a great score in SAT examination and admission
+                                    offers from most places I applied to. I would recommend EduAims to anyone who wants
+                                    to take SAT classes and study abroad.</p>
+                            </div>
+                            <div class="testimonial-info">
+                                <span class="testimonial-name text-white">Kiran </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-carousel carousel-style-one">
+                        <div class="single-testimonial">
+                            <div class="testimonial-text pt-46">
+                                <p class="text-white p-0">Not being that great at academics, I was a bit apprehensive.
+                                    The counsellors at EduAims helped me build my profile well enough to get into
+                                    LSE.</p>
+                            </div>
+                            <div class="testimonial-info">
+                                <span class="testimonial-name text-white">Jowin</span>
                             </div>
                         </div>
                     </div>
