--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -16,7 +16,7 @@
                 <div class="modal-body">
                     <div class="form-pop-up-content ptb-60 pl-60 pr-60">
                         <div class="area-title text-center mb-43">
-                            <img src="/images/logo.png" style="width: 127px;height: 58px;" alt="jobhere">
+                            <img src="/img/logo-extended.png" style="width: 127px;height: 58px;" alt="jobhere">
                         </div>
                         <form action="{{ path('_home') }}" method="post">
                             <div class="form-box">
