ui changes and hompage fixes

--- a/public/css/shortcode/default.css
+++ b/public/css/shortcode/default.css
@@ -1239,7 +1239,7 @@ textarea:focus {
 }
 
 .bg-7 {
-    background: rgba(0, 0, 0, 0) url("../../img/handshake.jpg") repeat scroll 0 0 / cover ;
+    background: rgba(0, 0, 0, 0) url("../../img/office.jpg") repeat scroll 0 0 / cover ;
 }
 
 .bg-8 {
