--- a/templates/home/aboutus.html.twig
+++ b/templates/home/aboutus.html.twig
@@ -21,12 +21,12 @@
     </div>
     <!--End of Breadcrumb Banner Area-->
     <!-- About Area Start -->
-    <div class="about-area ptb-130 ptb-sm-60">
+    <div class="about-area ptb-130 ptb-sm-60" style="padding-bottom: 0px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
                     <div class="abt-img img-full">
-                        <img src="images/bg/about.jpg" alt="jobhere">
+                        <img src="/img/meet.jpg" alt="jobhere">
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -50,7 +50,7 @@
             </div>
         </div>
     </div>
-    <div class="team-area pt-130 pb-100 pt-sm-60 pb-sm-30">
+    <div class="team-area pt-sm-60 pb-sm-30">
         <div class="container">
             <!-- Section Title Start -->
             <div class="row">
