--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -26,7 +26,7 @@
                                         <h1 style="color: white"><b>Skillsfarm...</b></h1>
                                         <div class="banner-readmore wow bounceInUp mt-35" data-wow-duration="3s"
                                              data-wow-delay="2s">
-                                            <a class="button slider-btn" href="#">Submit Resume</a>
+                                            <a class="button slider-btn" href="{{ path('_general') }}">Submit Resume</a>
                                         </div>
                                     </div>
                                 </div>
@@ -51,7 +51,7 @@
                                             your resume<br>You can fill the form and get started</p>
                                         <div class="banner-readmore wow bounceInUp mt-35" data-wow-duration="1s"
                                              data-wow-delay=".6s">
-                                            <a class="button slider-btn" href="#">Submit Resume</a>
+                                            <a class="button slider-btn" href="{{ path('_general') }}">Submit Resume</a>
                                         </div>
                                     </div>
                                 </div>
